[package]
name = "twilight-lavalink"
version = "0.15.1"

[dependencies]
dashmap = { default-features = false, version = "5.3" }
futures-util = { default-features = false, features = ["bilock", "std", "unstable"], version = "0.3" }
http = { default-features = false, version = "0.2" }
serde = { default-features = false, features = ["derive", "std"], version = "1" }
serde_json = { default-features = false, features = ["std"], version = "1" }
tokio = { default-features = false, features = ["macros", "net", "rt", "sync", "time"], version = "1.0" }
tokio-tungstenite = { default-features = false, features = ["connect"], version = "0.18" }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
twilight-model = { default-features = false, version = "0.15.1" }

# Optional dependencies.
percent-encoding = { default-features = false, optional = true, version = "2" }

[dev-dependencies]
anyhow = { default-features = false, features = ["std"], version = "1" }
serde_test = { default-features = false, version = "1" }
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log"], version = "0.3" }
twilight-gateway = { default-features = false, features = ["rustls-native-roots"], version = "0.15.1" }
twilight-http = { default-features = false, features = ["rustls-native-roots"], version = "0.15.1" }

[features]
default = ["http-support", "rustls-native-roots"]
http-support = ["dep:percent-encoding"]
native = ["tokio-tungstenite/native-tls"]
rustls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]
